# YOLOv12-onCppQt6

./: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Main.qml  README.md  ReadCode.py  Resources.qrc  YOLO12.hpp  main.cpp  test001.cpp  test001.h
content/: Mainwindows.qml  Pictures.qml  Videos.qml  ZComboBox.qml
